# FASTA-heuristic-aligner

./: README.md  pyproject.toml
docs/: algorithm.md  complexity.md
examples/: database.fasta  demo_run.sh  query.fasta
src/fasta_align/: __init__.py  cli.py  diagonals.py  gapped.py  io_fasta.py  ktup.py  report.py  scoring.py  ungapped.py
src/fasta_align.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_gapped.py  test_io_fasta.py  test_ktup_diagonal.py  test_ungapped.py
