[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fasta-align"
version = "0.1.0"
description = "FASTA heuristic aligner"
requires-python = ">=3.10"

[project.scripts]
fasta-align = "fasta_align.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest"]
